kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/valid/005_operations_dep.kmt
/* $Id: 005_operations_dep.kmt,v 1.1 2006-03-30 16:47:56 zdrey Exp $ */

// Test of constraints in operations

package root_package;
require "005_operations.kmt"

class C2 inherits C1
{
	/** 
	 * This method overloads the op1 defined in C1, which does not have any parameter 
     */
	method op1() is do 
	end
}

class C2bis inherits C1, C1bis
{
	
	/**
	 * This method is defined in C1 and C1bis. User must tell which one of the two he
	 * wants to "inherit"
	 * (op2 from C1 is do)
	 */
	method op2() from C1 is do
	end
}