kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/005_superoperations_parammismatch1_inv.kmt
/* $Id: 005_superoperations_parammismatch1_inv.kmt,v 1.1 2007-06-15 11:30:49 dvojtise Exp $ */

// Test of constraints on operations
// This test must make specific errors to appear. 

package root_package;
using kermeta::standard



class A
{
   operation m(x : Object) : String is do

   end
}

class B inherits A
{
   method m(x : String) : String is do

   end
}
